# pocket-tagger

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml  requirements.txt  setup.sh
