[tool.poetry]
name = "pocket-tagger"
version = "0.1.0"
description = "Pocket documents auto tagger."
authors = ["naronA <otherthan.new@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
janome = "^0.4.0"
requests = "^2.22.0"
numpy = "^1.18.1"
html2text = "^2019.9.26"

[tool.poetry.dev-dependencies]
pynvim = "^0.4.0"
neovim = "^0.3.1"
black = "^19.10b0"
flake8-bugbear = "^21.0.0"
flake8 = "^3.7.9"
ipython = "^7.11.1"
isort = "^4.3.21"
jupyter = "^1.0.0"
mypy = "^0.761"
pre-commit = "^1.21.0"
pydocstyle = "^5.0.2"
pytest = "^6.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
